--- a/CCKS2025_LLM-Generated_Text_Detection/SuperAnnotate/dataset.ipynb
+++ b/CCKS2025_LLM-Generated_Text_Detection/SuperAnnotate/dataset.ipynb
@@ -436,7 +436,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "DL_pytorch",
+   "display_name": "learning_xr",
    "language": "python",
    "name": "python3"
   },
@@ -450,7 +450,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
